core/src/main/resources/META-INF/resources/primefaces-extensions/sheet/1-sheet.css
/* ------------------------------------ 
 * Sheet Extensions
 */
.ui-handsontable.ui-widget-content {
    border: none;
}

body .handsontable td {
    background: var(--surface-e, white);
    color: var(--text-color, #222);
}

body .handsontable th, .handsontable tr > th {
    font-weight: bold;
    background: var(--surface-b, white);
    color: var(--text-color, #222);
}

.handsontable td.area {
    background: #FC8;
}

.ui-sheet-error {
    display: block;
}

.ui-sheet-error .ui-outputlabel-rfi {
    padding-right: 4px;
}

.handsontable-inner {
    overflow: hidden;
}

.ui-handsontable .ui-datatable-header, .ui-handsontable .ui-datatable-footer {
    text-align: center;
    padding: 4px;
}

.handsontable .wtBorder {
    background-color: #F30 !important;
}

.ui-handsontable.ui-state-error {
    border-width: 2px;
    border-radius: 7px;
    color: #222;
}

.handsontable td.ui-message-error {
    background: #FCC;
}

.handsontable th .ui-sortable-column-icon.ui-icon {
    display: inline-block;
    position: relative;
    top: 3px;
    margin-left: 2px;
}

.handsontable th.ui-sortable-column {
    cursor: pointer;
}

.handson-filter input {
    width: 70px;
}

span.handson-filter {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 8px;
}

.handson-filter select {
    background: var(--surface-e, white);
    color: var(--text-color, #222);
}

/* CSS3 only hack until I can figure out a better way */
.ui-widget-content .handsontable th:not(:first-child) {
    border-left: none !important;
}

/* PF theme select appears smaller in 4.0 */
.handsontable select {
    padding: 2px;
}

body .handsontable .ui-icon {
    font-family: 'primeicons', sans-serif;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    display: inline-block;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body .handsontable .ui-icon-carat-2-n-s:before {
    content: "\e915";
}

body .handsontable .ui-icon-triangle-1-n:before {
    content: "\e914";
}

body .handsontable .ui-icon-triangle-1-s:before {
    content: "\e913";
}

